--- a/analysis/Study1.qmd
+++ b/analysis/Study1.qmd
@@ -239,11 +239,12 @@ df7b <- haven::read_sav("../data/Brand2023/Data_Mainz.sav") |>
     MAIA_SelfReg = maiaSelfRegulation, MAIA_BodyListening = maiaBodyListening,
     MAIA_Trusting = maiaTrusting, MAIA_EmoAwareness = maiaEmotionalAwareness) |> 
   mutate(across(starts_with("MAIA_"), \(x) datawizard::rescale(x, to = c(0, 5), range = c(1, 5))),# Original scale 1-5
-          across(PHQ15_01:PHQ15_15recode, \(x) datawizard::rescale(x, to = c(0,2), range =c(1,3))),
+          across(starts_with("PHQ15_"), \(x) datawizard::rescale(x, to = c(0,2), range = c(1,3))),
+         
            across(PHQ9_01:PHQ9_09, \(x) datawizard::rescale(x, to = c(0,3), range =c(1,4))))
 
 df7b$BPQ_BodyAwareness <- rowMeans(select(df7b, BPQ_01:BPQ_12), na.rm = TRUE)
-df7b$PHQ15_Sum <-rowSums(select(df7b,PHQ15_01:PHQ15_15recode), na.rm = TRUE)
+df7b$PHQ15_Sum <-rowMeans(select(df7b,PHQ15_01:PHQ15_15recode), na.rm = TRUE)
 df7b$PHQ9_Sum <- rowMeans(select(df7b, PHQ9_01:PHQ9_09), na.rm = TRUE)
 df7b$STAIT_Mean <- df7b$STAIT_Sum/20
   
@@ -620,7 +621,7 @@ df16 <- read.csv("../data/Scharte2025/data_IAS_rs.csv") |>
     MAIA_BodyListening = (maia32 + maia33 +maia34)/3,
     MAIA_Trusting = (maia35 + maia36 + maia37)/3 ,
     GAD7_Sum = rowSums(across(starts_with("gad1_")), na.rm = TRUE),
-    PHQ9_Sum = rowSums(across(starts_with("phq1_")), na.rm = TRUE)) |>
+    PHQ9_Sum = rowMeans(across(starts_with("phq1_")), na.rm = TRUE)) |>
   filter (!Age == 2004.00, !Age == 1999.00, # misreported age
           att == 2) # only those that select 'no' the attention check
 
