--- a/analysis/Study1.qmd
+++ b/analysis/Study1.qmd
@@ -332,11 +332,11 @@ df9 <- df9 |>
   ) |>
   mutate(across(starts_with("BFI_"), \(x) datawizard::rescale(x, to = c(0, 1)))) |>
   mutate(
-    Neuroticism = (BFI_1 + BFI_2 + BFI_3)/3,
-    Agreeableness = (BFI_10R + BFI_11 + BFI_12)/3,
-    Extraversion = (BFI_4 + BFI_5 + BFI_6)/3,
-    Conscientiousness = (BFI_13 + BFI_14 + BFI_15R)/3,
-    Openness = (BFI_7 + BFI_8 + BFI_9)/3)
+    Neuroticism = (BFI_5 + BFI_10 + BFI_15)/3,
+    Agreeableness = (BFI_3 + BFI_6 + BFI_13)/3,
+    Extraversion = (BFI_2 + BFI_8 + BFI_12)/3,
+    Conscientiousness = (BFI_1 + BFI_7 + BFI_11)/3,
+    Openness = (BFI_4 + BFI_9 + BFI_14)/3)
   
 ```
 
